# CursBreaker

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: build.yml
benchmark/: README.md
benchmark/corpus/: manifest.csv
docs/: accessibility.md  bundling-tesseract.md
packaging/: bundled_languages.txt  cursbreaker.spec  cursebreaker.spec  launch.py
src/cursbreaker/: __init__.py  __main__.py  align.py  alto.py  benchmark.py  config.py  gemini_client.py  hocr.py  images.py  models.py  pipeline.py  pricing.py  searchable_pdf.py  server.py  tesseract_client.py
src/cursbreaker/fonts/: LICENSE.dejavu
src/cursbreaker/static/: app.js  index.html  styles.css
src/cursebreaker/: __init__.py  __main__.py  align.py  config.py  gemini_client.py  hocr.py  images.py  models.py  pipeline.py  searchable_pdf.py  server.py
src/cursebreaker/fonts/: LICENSE.dejavu
src/cursebreaker/static/: app.js  index.html  styles.css
tests/: conftest.py  test_accessibility.py  test_align.py  test_alto.py  test_benchmark.py  test_frontend_js.py  test_gemini_client.py  test_hocr.py  test_images.py  test_main.py  test_models.py  test_pipeline.py  test_pricing.py  test_searchable_pdf.py  test_server.py  test_static_ui.py  test_tesseract_client.py  test_wordbox_eval.py
tests/fixtures/benchmark_sample/: manifest.csv
tests/fixtures/benchmark_sample/cache/: ceil01.fixture.txt  letter01.fixture.txt  (+1 more)
tests/js/: test_activity_log.mjs  test_cost_format.mjs  test_estimate.mjs  test_results.mjs  test_upload.mjs
(+3 files in other folders)
