[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursebreaker"
version = "0.1.0"
description = "Transcribe handwriting with Google Gemini and export searchable hOCR plus plain text."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "CurseBreaker contributors" }]
keywords = ["ocr", "hocr", "handwriting", "htr", "gemini", "transcription", "digital-humanities"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "pymupdf>=1.24",
    "lxml>=5.0",
    "pydantic>=2.6",
    "google-genai>=1.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
cursebreaker = "cursebreaker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cursebreaker = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
